--- a/style.css
+++ b/style.css
@@ -6,34 +6,48 @@ body {
 }
 
 .navbar {
-    padding: 1px; /* Adjust padding as needed */
-    border-radius: 5px; /* Optional: Adds rounded corners to the navbar */
+    padding: 1px;
+    border-radius: 5px;
 }
 
 .navbar-brand img {
-    max-height: 80px; /* Adjust maximum height of the logo */
+    max-height: 80px;
 }
 
 .navbar-nav {
-    justify-content: flex-end; /* Align social icons to the right */
+    justify-content: flex-end;
 }
 
 .navbar-nav .nav-link {
-    margin: 0 10px; /* Adjust margin between social icons */
+    margin: 0 10px;
 }
 
-/* Custom icon size */
 .navbar-nav i {
     font-size: 1.5rem;
 }
 
-/* Custom icon colors */
-.bi-facebook { color: #3b5998; }
-.bi-twitter { color: #1da1f2; }
-.bi-instagram { color: #e1306c; } /* Instagram icon color */
-.bi-tiktok { color: #000; } /* TikTok icon color */
+@media (max-width: 768px) {
+    .navbar-nav .nav-link {
+        margin: 5px 0;
+    }
+    .navbar-nav i {
+        font-size: 1.25rem;
+    }
+}
 
+#toggle-button{
+    background: linear-gradient(45deg, #004857, #0ed285);
+    border: none;
+}
 
+#toggle-button:hover{
+    background: linear-gradient(45deg, #0ed285, #004857);
+}
+
+#toggle-button:focus{
+    outline: none;
+    box-shadow: none;
+}
 a:link, a:visited, a:hover, a:active {
     text-decoration: none;
 }
